--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "scripts": {
     "test": "npm run eslint && npm run mocha",
     "eslint": "eslint src/. test/. --config .eslintrc.json",
-    "start": "node src/",
+    "start": "nodemon src/",
     "mocha": "mocha test/ --recursive --exit"
   },
   "dependencies": {
+    "@feathersjs/authentication": "^2.1.1",
+    "@feathersjs/authentication-jwt": "^1.0.2",
+    "@feathersjs/authentication-oauth2": "^1.0.3",
     "@feathersjs/configuration": "^1.0.2",
     "@feathersjs/errors": "^3.2.1",
     "@feathersjs/express": "^1.1.2",
@@ -35,13 +38,19 @@
     "@feathersjs/socketio": "^3.0.2",
     "apisauce": "^0.14.3",
     "axios": "^0.17.1",
+    "babel": "^6.23.0",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "feathers-authentication": "^1.3.1",
     "helmet": "^3.9.0",
+    "passport-google": "^0.3.0",
+    "ramda": "^0.25.0",
     "serve-favicon": "^2.4.5",
     "winston": "^2.4.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^4.14.0",
     "mocha": "^4.0.1",
     "request": "^2.83.0",
