--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel": "^6.23.0",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "feathers-authentication": "^1.3.1",
     "helmet": "^3.9.0",
     "passport-google": "^0.3.0",
