--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "dotenv": "^4.0.0",
     "feathers-authentication": "^1.3.1",
     "helmet": "^3.9.0",
+    "passport": "^0.4.0",
     "passport-google": "^0.3.0",
+    "passport-google-oauth20": "^1.0.0",
     "ramda": "^0.25.0",
     "serve-favicon": "^2.4.5",
     "winston": "^2.4.0"
