--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "feathers-authentication": "^1.3.1",
+    "google-auth-library": "^1.0.0",
+    "googleapis": "^24.0.0",
     "helmet": "^3.9.0",
     "passport": "^0.4.0",
     "passport-google": "^0.3.0",
