--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "feathers-authentication": "^1.3.1",
-    "google-auth-library": "^1.0.0",
+    "google-auth-library": "^0.12.0",
+    "google-calendar": "^1.3.2",
     "googleapis": "^24.0.0",
     "helmet": "^3.9.0",
     "passport": "^0.4.0",
