--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bcrypt": "^1.0.3",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
+    "cronofy": "^3.0.2",
     "dotenv": "^4.0.0",
     "feathers-authentication": "^1.3.1",
     "file-system": "^2.2.2",
