--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "axios": "^0.17.1",
     "babel": "^6.23.0",
     "bcrypt": "^1.0.3",
+    "cloudinary": "^1.9.1",
     "compression": "^1.7.1",
     "cors": "^2.8.4",
     "cronofy": "^3.0.2",
     "dotenv": "^4.0.0",
+    "express-fileupload": "^0.3.0",
     "feathers-authentication": "^1.3.1",
     "file-system": "^2.2.2",
     "google-auth-library": "^1.0.0",
