--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "dotenv": "^4.0.0",
     "express-fileupload": "^0.3.0",
     "feathers-authentication": "^1.3.1",
+    "feathers-memory": "^2.1.0",
     "file-system": "^2.2.2",
     "google-auth-library": "^1.0.0",
     "googleapis": "^24.0.0",
@@ -59,6 +60,7 @@
     "ramda": "^0.25.0",
     "sequelize": "^4.31.1",
     "serve-favicon": "^2.4.5",
+    "socket-io": "^1.0.0",
     "winston": "^2.4.0"
   },
   "devDependencies": {
