--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@feathersjs/feathers": "^3.0.5",
     "@feathersjs/socketio": "^3.0.2",
     "apisauce": "^0.14.3",
+    "aws-sdk": "^2.186.0",
     "axios": "^0.17.1",
     "babel": "^6.23.0",
     "bcrypt": "^1.0.3",
@@ -52,6 +53,8 @@
     "googleapis": "^24.0.0",
     "helmet": "^3.9.0",
     "imagemagick": "^0.1.3",
+    "multer": "^1.3.0",
+    "multer-s3": "^2.7.0",
     "passport": "^0.4.0",
     "passport-google": "^0.3.0",
     "passport-google-oauth20": "^1.0.0",
