--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ramda": "^0.25.0",
     "sequelize": "^4.31.1",
     "serve-favicon": "^2.4.5",
+    "util": "^0.10.3",
     "winston": "^2.4.0"
   },
   "devDependencies": {
